# qube_ws

./: .gitignore  README.md
src/qube_bringup/: package.xml  setup.py
src/qube_bringup/launch/: bringup.launch.py
src/qube_bringup/urdf/: controlled_qube.urdf.xacro
src/qube_controller/: package.xml  setup.py
src/qube_controller/qube_controller/: controller.py
src/qube_description/: package.xml  setup.py
src/qube_description/launch/: view_qube.launch.py
src/qube_description/rviz/: view_config.rviz
src/qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
