<?xml version="1.0"?>
<package format="3">
  <name>qube_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Qube using ROS 2</description>
  <maintainer email="antonkniv@gmail.com">anton-knivsfla</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>qube_driver</exec_depend>
  <exec_depend>qube_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>