<?xml version="1.0"?>
<package format="3">
  <name>qube_controller</name>
  <version>0.0.0</version>
  <description>PID‐controller for the Quanser Qube</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <exec_depend>ros2param</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>